--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Cracking AI # blog_name will be displayed in your blog page
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: Dive into AI Insights, from Basics to Brilliance, as we Bring Research Papers to Life
+blog_description:
 permalink: /blog/:year/:title/
 
 # Pagination
